Documentation fixes to build with texinfo >= 5.0

--- a/mb_gnu/src/binutils/bfd/doc/bfdt.texi
+++ b/mb_gnu/src/binutils/bfd/doc/bfdt.texi
@@ -308,6 +308,7 @@ Return the BFD error handler function.
 
 @section Symbols
 
+@subsection Functions
 
 @findex bfd_get_reloc_upper_bound
 @subsubsection @code{bfd_get_reloc_upper_bound}
