--- a/mb_gnu/src/binutils/bfd/doc/elf.texi
+++ b/mb_gnu/src/binutils/bfd/doc/elf.texi
@@ -1,5 +1,4 @@
-@section 
-ELF backends
+@section ELF backends
 
 BFD support for ELF formats is being worked on.
 Currently, the best supported back ends are for sparc and i386
@@ -8,6 +7,8 @@ Currently, the best supported back ends are for sparc and i386
 Documentation of the internals of the support code still needs
 to be written.  The code is changing quickly enough that we
 haven't bothered yet.
+
+@subsection ELF functions
 
 @findex bfd_elf_find_section
 @subsubsection @code{bfd_elf_find_section}
